--- a/AlarmClock.css
+++ b/AlarmClock.css
@@ -1,4 +1,15 @@
-.clockBoxStlye{
+/* * {
+  font-weight: bold;
+  color: darkorange;
+  text-align: center;
+  position: relative;
+}
+
+body {
+  background-color: black;
+}
+
+.clockBoxStyle {
   width: 1000px;
   height: 200px;
   margin: none;
@@ -6,33 +17,58 @@
   background-color: lightgoldenrodyellow;
 }
 
-.textBoxStyle{
-  width: 98%;
+.textBoxStyle {
+  width: 50%; 
   height: 49%;
   margin: none;
   display: inline-block;
   background-color: aqua;
 }
 
-.smallTextBoxStyle{
+/* .smallTextBoxStyle {
   width: 100%;
   height: 98%;
   margin: none;
   display: inline-block;
-}
+} */
 
-.alarmBoxStyle{
-  width: 98%;
-  height: 49%;
-  margin: none;
+/* .alarmBoxStyle {
+  width: 80%;
+  height: 80%;
+  margin-top: 20px;
+  margin-left: 100px;
+  font-size: x-large;
+  text-align: center;
   display: inline-block;
-  background-color: brown;
+  background-color: lightpink;
 }
 
-.buttonBoxStyle{
+.buttonBoxStyle {
   width: 1000px;
   height: 40px;
   margin: none;
+  
   display: inline-block;
   background-color: lightgrey;
+} */
+
+* {
+  text-align: center;
+  position: relative;
+  top: 50px;
+}
+
+body {
+  background-color: black;
+}
+
+.dateStyle {
+  font-size: 36px;
+  color: darkorange;
+}
+
+.timeStyle {
+  font-size: 48px;
+  font-weight: bold;
+  color: darkgray;
 }
