--- a/AlarmClock.css
+++ b/AlarmClock.css
@@ -65,10 +65,23 @@ body {
 .dateStyle {
   font-size: 36px;
   color: darkorange;
+  display: block;
 }
 
 .timeStyle {
   font-size: 48px;
   font-weight: bold;
   color: darkgray;
+  display: block;
+}
+
+.buttonStyle {
+  width: 120px;
+  height: 50px;
+  font-size: x-large;
+}
+
+.modeShowStyle {
+  font-size: 24px;
+  color: whitesmoke;
 }
