--- a/AlarmClock.css
+++ b/AlarmClock.css
@@ -1,57 +1,3 @@
-/* * {
-  font-weight: bold;
-  color: darkorange;
-  text-align: center;
-  position: relative;
-}
-
-body {
-  background-color: black;
-}
-
-.clockBoxStyle {
-  width: 1000px;
-  height: 200px;
-  margin: none;
-  display: inline-block;
-  background-color: lightgoldenrodyellow;
-}
-
-.textBoxStyle {
-  width: 50%; 
-  height: 49%;
-  margin: none;
-  display: inline-block;
-  background-color: aqua;
-}
-
-/* .smallTextBoxStyle {
-  width: 100%;
-  height: 98%;
-  margin: none;
-  display: inline-block;
-} */
-
-/* .alarmBoxStyle {
-  width: 80%;
-  height: 80%;
-  margin-top: 20px;
-  margin-left: 100px;
-  font-size: x-large;
-  text-align: center;
-  display: inline-block;
-  background-color: lightpink;
-}
-
-.buttonBoxStyle {
-  width: 1000px;
-  height: 40px;
-  margin: none;
-  
-  display: inline-block;
-  background-color: lightgrey;
-} */
-
 * {
   text-align: center;
   position: relative;
@@ -62,14 +8,28 @@ body {
   background-color: black;
 }
 
+.clockAreaStyle {
+  border: 5px solid aliceblue;
+  display: inline-block;
+}
+
+.modeTitleStyle {
+  position: relative;
+  font-size: 48px;
+  font: bold;
+  color: whitesmoke;
+}
+
 .dateStyle {
-  font-size: 36px;
+  position: relative;
+  font-size: 60px;
   color: darkorange;
   display: block;
 }
 
 .timeStyle {
-  font-size: 48px;
+  position: relative;
+  font-size: 90px;
   font-weight: bold;
   color: darkgray;
   display: block;
@@ -81,7 +41,3 @@ body {
   font-size: x-large;
 }
 
-.modeShowStyle {
-  font-size: 24px;
-  color: whitesmoke;
-}
