--- a/AlarmClock.css
+++ b/AlarmClock.css
@@ -8,14 +8,16 @@ body {
   background-color: black;
 }
 
-/* @font-face {
-  font-family: 'LAB디지털';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/LAB디지털.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
+@font-face {
+    font-family: 'intelone-mono-font-family-regular';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-1@1.1/intelone-mono-font-family-regular.woff2') format('woff2');
+    font-weight: 300;
+    font-style: normal;
 }
-*{ font-family: 'LAB디지털'; } */
 
+* {
+	font-family: 'intelone-mono-font-family-regular';
+}
 
 .clockAreaStyle {
   width: 80%;
