--- a/AlarmClock.css
+++ b/AlarmClock.css
@@ -8,16 +8,25 @@ body {
   background-color: black;
 }
 
+/* @font-face {
+    font-family: 'NeoDunggeunmo';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.3/NeoDunggeunmo.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+} */
+
 @font-face {
-    font-family: 'intelone-mono-font-family-regular';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-1@1.1/intelone-mono-font-family-regular.woff2') format('woff2');
-    font-weight: 300;
+    font-family: 'IBMPlexSansKR-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/IBMPlexSansKR-Regular.woff') format('woff');
+    font-weight: normal;
     font-style: normal;
 }
 
 * {
-	font-family: 'intelone-mono-font-family-regular';
-}
+	/* font-family: 'NeoDunggeunmo'; */
+  font-family: 'IBMPlexSansKR-Regular';
+} 
+
 
 .clockAreaStyle {
   width: 80%;
